force-app/main/default/objects/AgentWork/fields/CC_AgentLogin__c.field-meta.xml
<CustomField>
    <fullName>CC_AgentLogin__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AgentLogin</label>
    <length>15</length>
    <type>Text</type>
</CustomField>