force-app/main/default/objects/AgentWork/fields/CC_ChatTranscript__c.field-meta.xml
<CustomField>
    <fullName>CC_ChatTranscript__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ChatTranscript</label>
    <referenceTo>LiveChatTranscript</referenceTo>
    <relationshipLabel>Agent Work</relationshipLabel>
    <relationshipName>Agent_Work</relationshipName>
    <type>Lookup</type>
</CustomField>