force-app/main/default/objects/AgentWork/fields/CC_esAbandonado__c.field-meta.xml
<CustomField>
    <fullName>CC_esAbandonado__c</fullName>
    <formula>IF(OR (ISNULL(CancelDateTime), ISBLANK(CancelDateTime) ) , false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abandonado</label>
    <type>Checkbox</type>
</CustomField>