force-app/main/default/objects/AgentWork/fields/CC_esRona__c.field-meta.xml
<CustomField>
    <fullName>CC_esRona__c</fullName>
    <formula>IF(OR (ISNULL(PushTimeoutDateTime), ISBLANK(PushTimeoutDateTime) ) , false, true)</formula>
    <label>Rona</label>
    <type>Checkbox</type>
</CustomField>