force-app/main/default/objects/AgentWork/fields/CC_Idioma__c.field-meta.xml
<CustomField>
    <fullName>CC_Idioma__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Idioma</label>
    <length>3</length>
    <type>Text</type>
</CustomField>