force-app/main/default/objects/AgentWork/fields/CC_ProxyClientId__c.field-meta.xml
<CustomField>
    <fullName>CC_ProxyClientId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ProxyClientId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>